--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -16,33 +16,33 @@
     <link rel="icon" type="image/x-icon" href="{% static 'notes/images/favicon.ico' %}">
 
     {% if title %}
-        <title>Encrypted Notebook - {{ title }}</title>
+        <title>MedKit - {{ title }}</title>
     {% else %}
-        <title>Encrypted Notebook</title>
+        <title>MedKit</title>
     {% endif %}
 </head>
 <body>
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{% url 'notes-home' %}">Encrypted Notebook</a>
+          <a class="navbar-brand mr-4" href="{% url 'notes-home' %}">Medkit</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{% url 'notes-home' %}">Home</a>
-              <a class="nav-item nav-link" href="{% url 'notes-about' %}">About</a>
+              <a class="nav-item nav-link" href="{% url 'notes-home' %}">Strona główna</a>
+              <a class="nav-item nav-link" href="{% url 'notes-about' %}">O projekcie</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'note-create' %}">New note</a>
-                <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                <a class="nav-item nav-link" href="{% url 'note-create' %}">Nowa notatka</a>
+                <a class="nav-item nav-link" href="{% url 'profile' %}">Profil</a>
+                <a class="nav-item nav-link" href="{% url 'logout' %}">Wyloguj się</a>
               {% else %}
-                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                <a class="nav-item nav-link" href="{% url 'login' %}">Zaloguj się</a>
+                <a class="nav-item nav-link" href="{% url 'register' %}">Zarejestruj się</a>
               {% endif %}
             </div>
           </div>
