--- a/notes/templates/notes/home.html
+++ b/notes/templates/notes/home.html
@@ -14,7 +14,7 @@
 {% endif %}
 {% endfor %}
 {% if not user.is_authenticated %}
-<h2>You're not logged in.</h2>
-<p><a href="{% url 'login' %}">Log in</a> to see your notes.</p>
+<h2>Nie jesteś zalogowany.</h2>
+<p><a href="{% url 'login' %}">Zaloguj się</a> żeby zobaczyć swoje sprawy.</p>
 {% endif %}
 {% endblock content %}
