--- a/notes/templates/notes/note_confirm_delete.html
+++ b/notes/templates/notes/note_confirm_delete.html
@@ -4,12 +4,12 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Delete Note</legend>
-                <h2>Are you sure you want to delete the note "{{ object.title }}"</h2>
+                <legend class="border-bottom mb-4">Usunąć notatkę</legend>
+                <h2>Czy jesteś pewien, że chcesz usunąć notatkę "{{ object.title }}"</h2>
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-danger" type="submit">Yes, Delete</button>
-                <a class="btn btn-outline-secondary" href="{% url 'note-detail' object.id %}">Cancel</a>
+                <button class="btn btn-outline-danger" type="submit">Tak, potwierdzam</button>
+                <a class="btn btn-outline-secondary" href="{% url 'note-detail' object.id %}">Odrzuć</a>
             </div>
         </form>
     </div>
