--- a/notes/templates/notes/note_detail.html
+++ b/notes/templates/notes/note_detail.html
@@ -6,8 +6,8 @@
         <small class="text-muted">{{ object.date_posted|date:"F d, Y" }}</small>
         {% if object.author == user %}
           <div>
-            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'note-update' object.id %}">Update</a>
-            <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'note-delete' object.id %}">Delete</a>
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'note-update' object.id %}">Zaktualizuj</a>
+            <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'note-delete' object.id %}">Usuń</a>
           </div>
         {% endif %}
       </div>
