--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,6 +1,6 @@
 {% extends "notes/base.html" %}
 {% block content %}
     <div class="alert alert-info">
-        An email has been sent with instructions to reset your password
+        Mail z instrukcją do zmiany hasła został wysłany na pocztę.
     </div>
 {% endblock content %}
