--- a/notes/templates/notes/form.html
+++ b/notes/templates/notes/form.html
@@ -1,5 +1,23 @@
 {% extends "notes/base.html" %}
 {% block content %}
-    <h1>O projekcie</h1>
-    <p style="text-align:justify">Dana aplikacja ma za cel rozszeryć możliwości komunikacji zarówno pomiędzy lekarzem a pacjentem, jak i między lekarzami i placówkami. Jest to próba rozszerzenia możliwości stron pacjent.gov.pl i gabinet.gov.pl w stronę zapisywania historii leczenia, spisu aktualnie przyjmowanych leków oraz wystawienia receptów oraz skierowania na badania. Jest to poważny problem, ponieważ w chwili obecnej lekarz, który wcześniej nie miał do czynienia z tym pacjentem, musi dosłownie z karteczek odczytywać użyteczną informację. </p>
+<h1>O projekcie</h1>
+<p style="text-align:justify">
+	<form>
+		<label for="lname">Jak jest twoje dzisiejsze samopoczucie?</label><br>
+		<input type="radio" id="dobre" name="fav_language" value="dobre">
+		<label for="dobre">dobre</label>
+		<input type="radio" id="złe" name="fav_language" value="złe">
+		<label for="złe">złe</label>
+		<input type="radio" id="średnie" name="fav_language" value="średnie">
+		<label for="średnie">średnie</label><br>
+		<label for="fname">Wpisz swoją dzisiejszą wagę:</label><br>
+		<input type="text" id="fname" name="fname"><br>
+		<label for="fname">Jak się dzisiaj czujesz po zażyciu leków:</label><br>
+		<input type="text" id="fname" name="fname"><br>
+		<label for="fname">Czy masz jakieś istotne pytania do Twojego lekarza?</label><br>
+		<input type="text" id="fname" name="fname"><br>
+		<label for="fname">Jeżeli masz dodatkowe uwagi podaj je poniżej:</label><br>
+		<input type="text" id="fname" name="fname"><br>
+	</form>
+</p>
 {% endblock content %}
