--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -39,7 +39,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'note-create' %}">Nowa notatka</a>
+                <!-- <a class="nav-item nav-link" href="{% url 'note-create' %}">Nowa notatka</a> -->
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profil</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Wyloguj się</a>
               {% else %}
