--- a/notes/templates/notes/portal.html
+++ b/notes/templates/notes/portal.html
@@ -1,5 +1,68 @@
 {% extends "notes/base.html" %}
 {% block content %}
-    <h1>O projekcie</h1>
-    <p style="text-align:justify">Dana aplikacja ma za cel rozszeryć możliwości komunikacji zarówno pomiędzy lekarzem a pacjentem, jak i między lekarzami i placówkami. Jest to próba rozszerzenia możliwości stron pacjent.gov.pl i gabinet.gov.pl w stronę zapisywania historii leczenia, spisu aktualnie przyjmowanych leków oraz wystawienia receptów oraz skierowania na badania. Jest to poważny problem, ponieważ w chwili obecnej lekarz, który wcześniej nie miał do czynienia z tym pacjentem, musi dosłownie z karteczek odczytywać użyteczną informację. </p>
+<h1 class="faq-heading">test</h1>
+<p style="text-align:justify">
+<h1 class="faq-heading">Pytania i odpowiedzi</h1>
+<div class="faq-one">
+	<h2 class="faq-page">Czy echo serca i USG serca to to samo?</h2>
+	<div class="faq-body">
+		<p>Echo serca, nazywane też m.in. echokardiografią, USG serca i UKG, to badanie diagnostyczne, w którym wykorzystuje się technikę ultrasonograficzną. Pozwala na uzyskanie obrazu struktur serca. Dzięki temu możliwa jest ocena funkcjonowania jam i zastawek tego narządu.</p>
+	</div>
+
+	<h2 class="faq-page">Jak przygotować się do badania kardiologicznego?</h2>
+	<div class="faq-body">
+		<p>Bezpośrednio przed próbą wysiłkową nie należy: palić papierosów, spożywać posiłku, pić mocnej kawy czy herbaty. Należy przynieść skierowania od lekarza. Leki przyjmowane na stałe zażyć o zwykłej porze, chyba że lekarz kierujący zalecił inaczej, wtedy należy zastosować się do jego wskazówek.</p>
+	</div>
+
+	<h2 class="faq-page">Jakie są badania kardiologiczne?</h2>
+	<div class="faq-body">
+		<p>Podstawowe badania obejmują elektrokardiogram spoczynkowy (EKG), badanie echokardiograficzne serca, próbę wysiłkową, ambulatoryjne monitorowanie (Holter) ciśnienia lub zaburzeń rytmu.</p>
+	</div>
+
+	<h2 class="faq-page">Ile trwają badania kardiologiczne?</h2>
+	<div class="faq-body">
+		<p>Dodatkowo proszę, by pacjentów przed EKG wysiłkowym informować, że: Przed samym badaniem lekarz może stwierdzić konieczność wykonania dodatkowych badań i skierować na nie pacjenta. Do badania należy założyć wygodne buty i luźny strój. Badanie trwa ok. 30 minut, wynik dostępny jest od razu po jego zakończeniu.</p>
+	</div>
+
+	<h2 class="faq-page">Jakie wyniki świadczą o niewydolności serca?</h2>
+	<div class="faq-body">
+		<p>Wzrost aktywności w granicach 400-4000 U/l sugeruje niewydolność krążenia, w granicach 200-400 U/l zawał mięśnie sercowego. Aminotransferaza asparaginianowa, podobnie jak alaninowa, jest enzymem wewnątrzkomórkowym, którego obecność we krwi może świadczyć o uszkodzeniu serca.</p>
+	</div>
+
+	<h2 class="faq-page">Jakie badanie serca jest najdokładniejsze?</h2>
+	<div class="faq-body">
+		<p>Dokładniejszym badaniem serca jest elektrokardiogram (ekg), czyli badanie czynności elektrycznej serca. Przypięte do ciała pacjenta specjalne elektrody zapisują impulsy elektryczne.</p>
+	</div>
+
+	<h2 class="faq-page">Czy stres wpływa na badanie EKG?</h2>
+	<div class="faq-body">
+		<p>Przed planowanym badaniem EKG spoczynkowym, nie należy podejmować intensywnego wysiłku fizycznego. Na badanie EKG należy zgłosić się 10-15 minut wcześniej, gdyż pośpiech, stres, wysiłek fizyczny np. szybki marsz, wejście po schodach może przyspieszyć pracę serca i zaburzyć wynik badania.</p>
+	</div>
+
+	<h2 class="faq-page">Co osłabia serce?</h2>
+	<div class="faq-body">
+		<p>Dym z własnego lub cudzego papieroska tak samo uszkadza naczynia krwionośne, osłabia serce i układ krążenia. Krew się zagęszcza, ciśnienie i tętno rosną. Palenie sprzyja miażdżycy, do serca dociera mniej tlenu i substancji odżywczych.</p>
+	</div>
+
+	<h2 class="faq-page">Czego nie robić przy niewydolności serca?</h2>
+	<div class="faq-body">
+		<p>Chorzy z niewydolnością serca powinni ograniczyć spożycie soli kuchennej, ponieważ zawiera ona sód, który sprzyja zatrzymywaniu wody w organizmie. Dlatego nie należy dodawać soli do przygotowywanych pokarmów oraz powinno się unikać produktów z dużą zawartością sodu, na przykład żywności konserwowanej.</p>
+	</div>
+
+	<h2 class="faq-page">Jakie jest ciśnienie przy niewydolności serca?</h2>
+	<div class="faq-body">
+		<p>W momencie przyjęcia do szpitala ok. 25% pacjentów z NS ma ciśnienie skurczowe krwi (SBP) 120 mmHg. U osób hospitalizowanych SBP 100 mmHg stwierdza się u 3-10%. W dużych próbach klinicznych (mimo wcześniejszego wykluczenia chorych z NS z hipotonią) niskie ciśnienie tętnicze obserwowano u 6-8% badanych.</p>
+	</div>
+
+	<h2 class="faq-page">Jakie witaminy są dobre na serce?</h2>
+	<div class="faq-body">
+		<p>Jedną z ról, jaką spełniają witaminy jest wpływ na pracę układu nerwowego i mięśniowego, w tym działanie serca. Tutaj swą rolę w dużej mierze odgrywają witaminy z grupy B, a w szczególności tiamina (B1), kwas foliowy, pirydoksyna (B6), kobalamina (B12).</p>
+	</div>
+
+	<h2 class="faq-page">Kiedy EKG jest nieprawidłowe?</h2>
+	<div class="faq-body">
+		<p>Nieprawidłowe EKG jest wtedy, kiedy m.in. załamki R i S są wysokie. Takie wyniki EKG serca świadczą niekiedy o prawostronnym położeniu serca, ale też zawale tylnej ściany mięśnia sercowego. Jeżeli obserwujemy małą rozpiętość zespołu QRS, to możemy podejrzewać rozedmę płuc.</p>
+	</div>
+</div>
+</p>
 {% endblock content %}
