--- a/notes/templates/notes/form.html
+++ b/notes/templates/notes/form.html
@@ -17,7 +17,8 @@
 		<label for="fname">Czy masz jakieś istotne pytania do Twojego lekarza?</label><br>
 		<input type="text" id="fname" name="fname"><br>
 		<label for="fname">Jeżeli masz dodatkowe uwagi podaj je poniżej:</label><br>
-		<input type="text" id="fname" name="fname"><br>
+		<input type="text" id="fname" name="fname"><br><br><br>
 	</form>
+	<button type="submit" form="form1" value="Submit">Zapisz</button>
 </p>
 {% endblock content %}
