--- a/notes/templates/notes/form.html
+++ b/notes/templates/notes/form.html
@@ -3,13 +3,27 @@
 <h1>O projekcie</h1>
 <p style="text-align:justify">
 	<form>
-		<label for="lname">Jak jest twoje dzisiejsze samopoczucie?</label><br>
-		<input type="radio" id="dobre" name="fav_language" value="dobre">
-		<label for="dobre">dobre</label>
-		<input type="radio" id="złe" name="fav_language" value="złe">
-		<label for="złe">złe</label>
-		<input type="radio" id="średnie" name="fav_language" value="średnie">
-		<label for="średnie">średnie</label><br>
+		<label for="lname">Jak jest twoje dzisiejsze samopoczucie w skali od 1 (bardzo źle) do 10 (bardzo dobrze)?</label><br>
+		<input type="radio" id="1" name="fav_language" value="1">
+		<label for="1">1</label>
+		<input type="radio" id="2" name="fav_language" value="2">
+		<label for="2">2</label>
+		<input type="radio" id="3" name="fav_language" value="3">
+		<label for="3">3</label>
+		<input type="radio" id="4" name="fav_language" value="4">
+		<label for="4">4</label>
+		<input type="radio" id="5" name="fav_language" value="5">
+		<label for="5">5</label>
+		<input type="radio" id="6" name="fav_language" value="6">
+		<label for="6">6</label>
+		<input type="radio" id="7" name="fav_language" value="7">
+		<label for="7">7</label>
+		<input type="radio" id="8" name="fav_language" value="8">
+		<label for="8">8</label>
+		<input type="radio" id="9" name="fav_language" value="9">
+		<label for="9">9</label>
+		<input type="radio" id="10" name="fav_language" value="10">
+		<label for="10">10</label><br>
 		<label for="fname">Wpisz swoją dzisiejszą wagę:</label><br>
 		<input type="text" id="fname" name="fname"><br>
 		<label for="fname">Jak się dzisiaj czujesz po zażyciu leków:</label><br>
