--- a/notes/templates/notes/about.html
+++ b/notes/templates/notes/about.html
@@ -1,5 +1,6 @@
 {% extends "notes/base.html" %}
 {% block content %}
+    <h1>Wtyczka</h1>
     <h1>O projekcie</h1>
     <p style="text-align:justify">Dana aplikacja ma za cel rozszeryć możliwości komunikacji zarówno pomiędzy lekarzem a pacjentem, jak i między lekarzami i placówkami. Jest to próba rozszerzenia możliwości stron pacjent.gov.pl i gabinet.gov.pl w stronę zapisywania historii leczenia, spisu aktualnie przyjmowanych leków oraz wystawienia receptów oraz skierowania na badania. Jest to poważny problem, ponieważ w chwili obecnej lekarz, który wcześniej nie miał do czynienia z tym pacjentem, musi dosłownie z karteczek odczytywać użyteczną informację. </p>
 {% endblock content %}
