--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,5 +1,6 @@
 {% extends "notes/base.html" %}
 {% block content %}
+<h1>Wtyczka</h1>
     <h2>Zostałes wylogowany</h2>
     <div class="border-top pt-3">
         <small class="text-muted">
