--- a/notes/templates/notes/home.html
+++ b/notes/templates/notes/home.html
@@ -41,6 +41,7 @@
             </div>
         </div>
 {% else %}
+<h1>Wtyczka</h1>
 <h2>Aktualnie nie jesteś przypisany do żadnego lekarza </h2>
 {% endif %}
 {% endfor %}
