--- a/notes/templates/notes/home.html
+++ b/notes/templates/notes/home.html
@@ -1,7 +1,6 @@
 {% extends "notes/base.html" %}
 {% block content %}
-{% for note in notes %}
-{% if note.author == user %}
+{% if notes.author == user %}
 <!-- <h1>Wtyczka</h1> -->
 <div class="card" style="width: 100%; margin-bottom: 70px; margin-top: 70px; background-color: rgba(255,255,255, 0.5); ">
     <div class="row" >
@@ -11,39 +10,59 @@
         </div>
 </div>
 <div class="card-body" style="width: 100%; margin-top: -40px;">
-    <div class="container my-5" style="width: 100%">
-        <nav style="width: 100%">
-            <div class="nav nav-tabs" id="nav-tab" role="tablist" style="width: 100%">
-                <button class="nav-link active" id="nav-recepta-tab" data-bs-toggle="tab"
-                data-bs-target="#nav-recepta" type="button" role="tab" aria-controls="nav-recepta-tab" aria-selected='true'> Recepty </button>
-                <button class="nav-link " id="nav-leki-tab" data-bs-toggle="tab"
-                data-bs-target="#nav-leki" type="button" role="tab" aria-controls="nav-leki" aria-selected='false'> Lekarstwa </button>
-                <button class="nav-link " id="nav-badania-tab" data-bs-toggle="tab"
-                data-bs-target="#nav-badania" type="button" role="tab" aria-controls="nav-badania" aria-selected='false'> Historia badan </button>
-            </div>
+    <nav style="width: 100%">
+        <div class="nav nav-tabs" id="nav-tab" role="tablist" style="width: 100%">
+            <button class="nav-link active" id="nav-recepta-tab" data-bs-toggle="tab"
+            data-bs-target="#nav-recepta" type="button" role="tab" aria-controls="nav-recepta-tab" aria-selected='true'> Zrealizowane recepty </button>
+            <button class="nav-link " id="nav-leki-tab" data-bs-toggle="tab"
+            data-bs-target="#nav-leki" type="button" role="tab" aria-controls="nav-leki" aria-selected='false'> Przyjmowane lekarstwa </button>
+            <button class="nav-link " id="nav-badania-tab" data-bs-toggle="tab"
+            data-bs-target="#nav-badania" type="button" role="tab" aria-controls="nav-badania" aria-selected='false'> Historia badan </button>
+            <button class="nav-link " id="nav-wizyta-tab" data-bs-toggle="tab"
+            data-bs-target="#nav-wizyta" type="button" role="tab" aria-controls="nav-wizyta" aria-selected='false'> Termin następnej wizyty </button>
+            
+            <button class="nav-link " id="nav-skierowanie-tab" data-bs-toggle="tab"
+            data-bs-target="#nav-skierowanie" type="button" role="tab" aria-controls="nav-skierowanie" aria-selected='false'>Zlecone badania i skierowania</button>
+
+            <button class="nav-link " id="nav-zalecenia-tab" data-bs-toggle="tab"
+            data-bs-target="#nav-zalecenia" type="button" role="tab" aria-controls="nav-zalecenia" aria-selected='false'> Zalecenia </button>
+        </div>
         </nav>
-        
         <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade show active p-3" id="nav-recepta" role="tabpanel" aria-labelledby="nav-recepta-tab">
-                <div class="row"  style="width: 100%">
-                    <p>To moja recepta: {{note.recepty}} </p>
-                </div>
-            </div>
-            <div class="tab-pane fade show  p-3" id="nav-leki" role="tabpanel" aria-labelledby="nav-leki-tab">
-                <div class="row"  style="width: 100%">
-                    <p>To moje leki: {{note.lekarstwa}} </p>
-                </div>
-            </div>
-            <div class="tab-pane fade show  p-3" id="nav-badania" role="tabpanel" aria-labelledby="nav-badania-tab">
-                <div class="row"  style="width: 100%">
-                    <p>To moje badania: {{note.badania}} </p>
-                </div>
+        <div class="tab-pane fade show active p-3" id="nav-recepta" role="tabpanel" aria-labelledby="nav-recepta-tab">
+            <div class="row"  style="width: 100%">
+                <p>{{note.recepty}} </p>
             </div>
         </div>
+        <div class="tab-pane fade show  p-3" id="nav-leki" role="tabpanel" aria-labelledby="nav-leki-tab">
+            <div class="row"  style="width: 100%">
+                <p>{{note.lekarstwa}} </p>
+            </div>
+        </div>
+        <div class="tab-pane fade show  p-3" id="nav-badania" role="tabpanel" aria-labelledby="nav-badania-tab">
+            <div class="row"  style="width: 100%">
+                <p>{{note.badania}} </p>
+            </div>
+        </div>
+        <div class="tab-pane fade show  p-3" id="nav-badania" role="tabpanel" aria-labelledby="nav-wizyta-tab">
+            <div class="row"  style="width: 100%">
+                <p>{{note.wizyta}} </p>
+            </div>
+        </div>
+        <div class="tab-pane fade show  p-3" id="nav-skierowanie" role="tabpanel" aria-labelledby="nav-skierowanie-tab">
+        <div class="row"  style="width: 100%">
+            <p>{{note.skierowanie}} </p>
+        </div>
+    </div>
+    <div class="tab-pane fade show  p-3" id="nav-zalecenia" role="tabpanel" aria-labelledby="nav-zalecenia-tab">
+        <div class="row"  style="width: 100%">
+            <p>{{note.zalecenia}} </p>
+        </div>
+    </div>
+</div>
 {% else %}
 <h2>Aktualnie nie jesteś przypisany do żadnego lekarza </h2>
 {% endif %}
-{% endfor %}
 {% if not user.is_authenticated %}
 <h1>Wtyczka</h1>
 <h2>Nie jesteś zalogowany.</h2>
