--- a/notes/templates/notes/note_detail.html
+++ b/notes/templates/notes/note_detail.html
@@ -16,7 +16,7 @@
             data-bs-target="#nav-badania" type="button" role="tab" aria-controls="nav-badania" aria-selected='false'> Historia badan </button>
             <button class="nav-link " id="nav-wizyta-tab" data-bs-toggle="tab"
             data-bs-target="#nav-wizyta" type="button" role="tab" aria-controls="nav-wizyta" aria-selected='false'> Termin następnej wizyty </button>
-            
+
             <button class="nav-link " id="nav-skierowanie-tab" data-bs-toggle="tab"
             data-bs-target="#nav-skierowanie" type="button" role="tab" aria-controls="nav-skierowanie" aria-selected='false'>Zlecone badania i skierowania</button>
 
@@ -40,7 +40,7 @@
                 <p>{{note.badania}} </p>
             </div>
         </div>
-        <div class="tab-pane fade show  p-3" id="nav-badania" role="tabpanel" aria-labelledby="nav-wizyta-tab">
+        <div class="tab-pane fade show  p-3" id="nav-wizyta" role="tabpanel" aria-labelledby="nav-wizyta-tab">
           <div class="row"  style="width: 100%">
               <p>{{note.wizyta}} </p>
           </div>
