--- a/notes/templates/notes/home.html
+++ b/notes/templates/notes/home.html
@@ -1,16 +1,17 @@
 {% extends "notes/base.html" %}
 {% block content %}
-{% if notes.author == user %}
-<!-- <h1>Wtyczka</h1> -->
-<div class="card" style="width: 100%; margin-bottom: 70px; margin-top: 70px; background-color: rgba(255,255,255, 0.5); ">
-    <div class="row" >
-    <div class="col-lg-7" style="text-align: end; margin-top: 30px;" ><h1>Portal Pacjenta</h1><br></div>
-        <div class="col-lg-5">
-
-        </div>
-</div>
-<div class="card-body" style="width: 100%; margin-top: -40px;">
-    <nav style="width: 100%">
+{% for note in notes%}
+{% if note.author == user %}
+<h1 style="margin-top:100px ;">
+    Portal Pacjenta
+</h1>
+<article class="media content-section" style="margin-top: 70px;">
+    <div class="media-body">
+      <div class="article-metadata">
+        <small class="text-muted">{{ object.date_posted|date:"F d, Y" }}</small>
+      </div>
+      <h2 class="article-title">{{ object.name }}</h2>
+      <nav style="width: 100%">
         <div class="nav nav-tabs" id="nav-tab" role="tablist" style="width: 100%">
             <button class="nav-link active" id="nav-recepta-tab" data-bs-toggle="tab"
             data-bs-target="#nav-recepta" type="button" role="tab" aria-controls="nav-recepta-tab" aria-selected='true'> Zrealizowane recepty </button>
@@ -20,13 +21,15 @@
             data-bs-target="#nav-badania" type="button" role="tab" aria-controls="nav-badania" aria-selected='false'> Historia badan </button>
             <button class="nav-link " id="nav-wizyta-tab" data-bs-toggle="tab"
             data-bs-target="#nav-wizyta" type="button" role="tab" aria-controls="nav-wizyta" aria-selected='false'> Termin następnej wizyty </button>
+
             <button class="nav-link " id="nav-skierowanie-tab" data-bs-toggle="tab"
             data-bs-target="#nav-skierowanie" type="button" role="tab" aria-controls="nav-skierowanie" aria-selected='false'>Zlecone badania i skierowania</button>
+
             <button class="nav-link " id="nav-zalecenia-tab" data-bs-toggle="tab"
             data-bs-target="#nav-zalecenia" type="button" role="tab" aria-controls="nav-zalecenia" aria-selected='false'> Zalecenia </button>
         </div>
-        </nav>
-        <div class="tab-content" id="nav-tabContent">
+      </nav>
+      <div class="tab-content" id="nav-tabContent">
         <div class="tab-pane fade show active p-3" id="nav-recepta" role="tabpanel" aria-labelledby="nav-recepta-tab">
             <div class="row"  style="width: 100%">
                 <p>{{note.recepty}} </p>
@@ -43,28 +46,30 @@
             </div>
         </div>
         <div class="tab-pane fade show  p-3" id="nav-wizyta" role="tabpanel" aria-labelledby="nav-wizyta-tab">
-            <div class="row"  style="width: 100%">
-                <p>{{note.wizyta}} </p>
-            </div>
-        </div>
-        <div class="tab-pane fade show  p-3" id="nav-skierowanie" role="tabpanel" aria-labelledby="nav-skierowanie-tab">
+          <div class="row"  style="width: 100%">
+              <p>{{note.wizyta}} </p>
+          </div>
+      </div>
+      <div class="tab-pane fade show  p-3" id="nav-skierowanie" role="tabpanel" aria-labelledby="nav-skierowanie-tab">
         <div class="row"  style="width: 100%">
             <p>{{note.skierowanie}} </p>
         </div>
     </div>
     <div class="tab-pane fade show  p-3" id="nav-zalecenia" role="tabpanel" aria-labelledby="nav-zalecenia-tab">
-        <div class="row"  style="width: 100%">
-            <p>{{note.zalecenia}} </p>
-        </div>
+      <div class="row"  style="width: 100%">
+          <p>{{note.zalecenia}} </p>
+      </div>
+  </div>
     </div>
-</div>
-{% else %}
-<h1>Wtyczka</h1>
-<h2>Aktualnie nie jesteś przypisany do żadnego lekarza </h2>
+    </div>
+  </article>
+
 {% endif %}
+{%endfor%}
 {% if not user.is_authenticated %}
 <h1>Wtyczka</h1>
 <h2>Nie jesteś zalogowany.</h2>
 <p><a href="{% url 'login' %}">Zaloguj się</a> żeby zobaczyć swoje sprawy.</p>
 {% endif %}
 {% endblock content %}
+
